package edu.fiuba.algo3.modelo.multiplicador;

public interface MultiplicableStrategy {

    int aplicarMultiplicador(int puntos);

}
